--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -7,7 +7,7 @@
   }
 
   body{
-    background: #090806 url(http://bnetcmsus-a.akamaihd.net/cms/template_resource/ri/RI8Q9HOWY4U01465961118458.jpg) no-repeat top center;
+    background: #090806 url(../img/mapaAzeroth.jpg) no-repeat top center;
     background-attachment: fixed;
     font-family: "Friz Quadrata Std Medium" !important;
   }
@@ -28,7 +28,7 @@
 }
 
   button {
-    background-color: rgb(41, 28, 0);
+    background-color: rgb(0, 41, 14);
     border: none;
     border-radius: 5px;
     color: white;
@@ -77,8 +77,8 @@
       background-color: #e5e90186;
   }
 
-  .bg-Brown {
-    background-color: #d6a82a81;
+  .bg-BrownGrey {
+    background-color: #91876c81;;
   }
 
 /* ----- TEXTO ------*/
@@ -148,7 +148,7 @@
 .respuestaIncorrecta {
     color: rgb(194, 5, 5);
     font-weight: bolder;
-    background: url(../resources/images/checkSprites.png) -3px 6px;
+    /* background: url(../img/checkSprites.png) -3px 6px; */
     background-size: 58px 20px;
     background-repeat: no-repeat;
   }
@@ -156,7 +156,7 @@
   .respuestaCorrecta {
     color: rgb(4, 146, 47);
     font-weight: bolder;
-    background: url(../resources/images/checkSprites.png) -27px 6px;
+    /* background: url(../img/checkSprites.png) -27px 6px; */
     background-size: 58px 20px;
     background-repeat: no-repeat;
   }
@@ -177,13 +177,23 @@ main {
 
 #myForm input[type=text] {
     width: 100%;
-    margin-top: 15px;
+    background-color: #d6a82a81;
+    color: white;
+    border-radius: 5px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
 }
+
 
 #myForm select {
     width: 100%;
-    margin-top: 15px;
+    background-color: #d6a82a81;
+    color: white;
     border-radius: 5px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
 }
 
 
@@ -195,13 +205,18 @@ main {
     color: white;
     text-shadow: 2px 2px #000000;
 }
+
+#accordion h3:hover {
+    background-color: #4b6637c5;
+}
+
 #accordion .ui-accordion-content {
     width: 100%;
-    background-color: #d6a82a81;
-    color: rgb(34, 28, 56);
-    text-shadow: 1px 1px rgb(245, 245, 245);
+    background-color: #91876c81;
+    color: rgb(180, 186, 199);
+    text-shadow: 1px 1px rgb(0, 0, 0);
     font-size: 11pt;
-    font-family: Friz Quadrata Std Bold Italic ;
+    font-family: Friz Quadrata Std ;
     line-height: 16pt;
   }
   #accordion label {
@@ -210,7 +225,7 @@ main {
       font-size: 1.2em;
   }
   #accordion label:hover {
-      background-color: rgba(204, 71, 71, 0.637);
+      background-color: rgba(50, 44, 78, 0.637);
       border-radius: 5px;
   }
 
@@ -329,6 +344,11 @@ nav {
   
   #menu {
     display:none;
+  }
+
+  #right {
+      color: white;
+      text-shadow: 1px 1px rgb(0, 0, 0);
   }
     /*---- Desplegable-----*/
   
@@ -510,8 +530,11 @@ nav {
 @media only screen and (max-width: 600px) {
     /* For mobile phones: */
     [class*="col-"] {width: 100%;}
-    [class*="sep-"] {width: 0%;}
+    [class*="sep-"] {margin-left: 0px;margin-right: 0px;}
     #socialBar {
+        display: none;
+    }
+    footer {
         display: none;
     }
 }
